# Stack-Allocator

./: CMakeLists.txt  Makefile  StackAllocator.hpp  StackAllocator_fancy.hpp  TestAlloc.cpp  TestAllocator  TestAllocator.cpp  XorList.hpp  XorListTest  XorListTest.cpp
src/: MemoryManager.hpp  StackAllocator.hpp  TestAllocator.cpp  XorList.hpp  XorListTest.cpp
